--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="main">
     <!--top-->
     <header class="top">
-        <img src="./images/logo2.png" alt="國立科技高中-校園社團介紹網">
+        <img src="./images/logo.png" alt="國立科技高中-校園社團介紹網">
     </header>
 
     <!--left-->
@@ -19,7 +19,15 @@
        
         <!--left選單-->
         <nav class="menu">
-            menu
+            <div class="menu-header">
+                社團介紹
+            </div>
+            <a href="./guitar_history.html" target="myMain">吉他社</a>
+            <a href="">熱舞社</a>
+            <a href="">羽球社</a>
+            <a href="">足球社</a>
+            <a href="">童軍社</a>
+            <!-- alt 多數選取, ctrl + d 選擇 -->  
         </nav>
 
         <!--left update-->
@@ -40,7 +48,7 @@
 
         <!--right主要內容-->
         <main class="content">
-            content
+            <iframe src="./main.html" name="myMain" frameborder="0" width="100%" height="100%"></iframe>
         </main>
     </section>
     <!--righe end-->
