上傳修正程式碼

--- a/老師的/index.html
+++ b/老師的/index.html
@@ -5,14 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>國立科技高中─校園社團介紹網</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body class="main">
     <!-- top -->
     <header class="top">
-        <img src="./images/logo.png" alt="國立科技高中校園社團介紹網">
+        <a href="./index.html">
+            <img src="./images/logo.png" alt="國立科技高中校園社團介紹網">
+        </a>
     </header>
 
     <!-- left -->
@@ -27,7 +29,7 @@
             <!-- 超連結 -->
             <!-- alt + 左鍵 -->
             <!-- ctrl + D 選擇 -->
-            <a href="./guitar_history.html" target="myMain">吉他社</a>
+            <a href="./guitar_history.html" target="myMain123">吉他社</a>
             <a href="#">熱舞社</a>
             <a href="#">棒球社</a>
             <a href="#">羽球社</a>
@@ -71,8 +73,8 @@
         <!-- right 主要內容 -->
         <main class="content">
             <!-- content -->
-            <iframe src="./main.html" frameborder="0" name="myMain"></iframe>
-            
+            <iframe src="./main.html" frameborder="0" name="myMain123"></iframe>
+
 
             <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/qo3H-VgXmHE"
                 title="YouTube video player" frameborder="0"
