--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,15 +9,18 @@
     <link rel="stylesheet" href="./css/style.css">
 
 </head>
+
 <body class="main">
     <!--top-->
     <header class="top">
+        <a href="./index.html">
         <img src="./images/logo.png" alt="國立科技高中-校園社團介紹網">
+        </a>
     </header>
 
     <!--left-->
     <aside class="aside">
-       
+
         <!--left選單-->
         <nav class="menu">
             <div class="menu-header">
@@ -24,10 +28,11 @@
             </div>
             <a href="./guitar_history.html" target="myMain">吉他社</a>
             <a href="">熱舞社</a>
+            <a href="">棒球社</a>
             <a href="">羽球社</a>
             <a href="">足球社</a>
             <a href="">童軍社</a>
-            <!-- alt 多數選取, ctrl + d 選擇 -->  
+            <!-- alt 多數選取, ctrl + d 選擇 -->
         </nav>
 
         <!--left update-->
@@ -40,10 +45,10 @@
 
     <!--righe-->
     <section class="section">
-        
+
         <!--right跑馬燈-->
         <header class="marqee">
-            <marquee behavior="" direction="">歡迎光臨校園社團介紹網，參觀後請支持</marquee>
+            <marquee>歡迎光臨校園社團介紹網，參觀後請支持</marquee>
         </header>
 
         <!--right主要內容-->
@@ -59,4 +64,5 @@
         網頁設計及維護：泰山職訓局吳俊儀 0985******
     </footer>
 </body>
+
 </html>
