--- a/guitar_learning.html
+++ b/guitar_learning.html
@@ -9,12 +9,14 @@
 
     <style>
         body {
+            margin: 0;
             background: url(./images/0101.jpg) repeat;
-
+            font-family: '標楷體';
         }
 
         header {
             font-size: 18px;
+            font-weight: bold;
             color: #00FFFF;
             text-align: center;
         }
@@ -34,7 +36,9 @@
             flex-direction: column;
             align-items: center;
             color: blue;
-            height: 80vh;
+            height: 500px;
+            justify-content: space-around;
+            /* height: 80vh; */
             /* justify-content:space-around; */
         }
 
@@ -54,8 +58,8 @@
     <br>
     <nav>
         <a href="./index.html" target="_top">回社團介紹首頁</a>
+        <a href="./guitar_history.html" target="myMain">吉他社社史</a>
         <a href="./guitar_event.html" target="myMain">吉他社近期活動公告</a>
-        <a href="./guitar_learning.html" target="myMain">吉他社教學內容</a>
     </nav>
 
     <section>
